WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269373
Crash under WebPage::close()
https://bugs.webkit.org/show_bug.cgi?id=269373
Summary
Crash under WebPage::close()
Chris Dumez
Reported
2024-02-14 09:53:30 PST
Crash under WebPage::close(): ``` 49 std::__1::unique_ptr<WebCore::FrameLoader, std::__1::default_delete<WebCore::FrameLoader>>::operator*[abi:v160006]() const <== | 49 WTF::UniqueRef<WebCore::FrameLoader>::get() | 49 WebCore::LocalFrame::loader() | 49 WebKit::WebPage::close() | 49 auto void IPC::callMemberFunction<WebKit::WebPage, WebKit::WebPage, void (), std::__1::tuple<>>(WebKit::WebPage*, void (WebKit::WebPage::*)(), std::__1::tuple<>&&)::'lambda'(auto&&...)::operator()<>(auto&&...) const | 49 decltype(std::declval<WebKit::WebPage>()()) std::__1::__invoke[abi:v160006]<void IPC::callMemberFunction<WebKit::WebPage, WebKit::WebPage, void (), std::__1::tuple<>>(WebKit::WebPage*, void (WebKit::WebPage::*)(), std::__1::tuple<>&&)::'lambda'(auto&&...)>(WebKit::WebPage&&) | 49 decltype(auto) std::__1::__apply_tuple_impl[abi:v160006]<void IPC::callMemberFunction<WebKit::WebPage, WebKit::WebPage, void (), std::__1::tuple<>>(WebKit::WebPage*, void (WebKit::WebPage::*)(), std::__1::tuple<>&&)::'lambda'(auto&&...), std::__1::tuple<>>(WebKit::WebPage&&, WebKit::WebPage&&, std::__1::__tuple_indices<>) | 49 decltype(auto) std::__1::apply[abi:v160006]<void IPC::callMemberFunction<WebKit::WebPage, WebKit::WebPage, void (), std::__1::tuple<>>(WebKit::WebPage*, void (WebKit::WebPage::*)(), std::__1::tuple<>&&)::'lambda'(auto&&...), std::__1::tuple<>>(WebKit::WebPage&&, WebKit::WebPage&&) ```
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2024-02-14 09:53:48 PST
<
rdar://118486861
>
Chris Dumez
Comment 2
2024-02-14 09:56:31 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24424
EWS
Comment 3
2024-02-14 11:19:28 PST
Committed
274641@main
(c3b754f8cd59): <
https://commits.webkit.org/274641@main
> Reviewed commits have been landed. Closing PR #24424 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug