Crash under WebPage::close() https://bugs.webkit.org/show_bug.cgi?id=269373 rdar://118486861

Reviewed by Brent Fulgham.

Add a null check for the LocalFrame given that nothing prevents it
from being null and we're seeing null dereferences in the wild.

* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::close):

Canonical link: https://commits.webkit.org/274641@main